modified:   census_demo/census.ipynb 	new file:   census_demo/data/atlanta_metro_block.csv 	renamed:    census_demo/data/census_data.csv -> census_demo/data/atlanta_metro_tract.csv

--- a/census_demo/census.ipynb
+++ b/census_demo/census.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "for county, fips in county2fips.items():\n",
     "    st_fips = fips[:2]\n",
     "    cty_fips = fips[2:]\n",
-    "    url = f\"https://api.census.gov/data/2022/acs/acs5?get=NAME,B01001_001E&for=tract:*&in=state:{st_fips}+county:{cty_fips}&key={api_key}\"\n",
+    "    url = f\"https://api.census.gov/data/2022/acs/acs5?get=NAME,B01001_001E&for=block group:*&in=state:{st_fips}+county:{cty_fips}&key={api_key}\"\n",
     "    resp = requests.get(url)\n",
     "\n",
     "    data = resp.json()\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,48 +97,54 @@
        "      <th>state</th>\n",
        "      <th>county</th>\n",
        "      <th>tract</th>\n",
+       "      <th>block group</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Census Tract 1801.03; Barrow County; Georgia</td>\n",
-       "      <td>6014</td>\n",
+       "      <td>Block Group 1; Census Tract 1801.03; Barrow Co...</td>\n",
+       "      <td>2025</td>\n",
        "      <td>13</td>\n",
        "      <td>013</td>\n",
        "      <td>180103</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Census Tract 1801.04; Barrow County; Georgia</td>\n",
+       "      <td>Block Group 2; Census Tract 1801.03; Barrow Co...</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>13</td>\n",
+       "      <td>013</td>\n",
+       "      <td>180103</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Block Group 3; Census Tract 1801.03; Barrow Co...</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>13</td>\n",
+       "      <td>013</td>\n",
+       "      <td>180103</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Block Group 1; Census Tract 1801.04; Barrow Co...</td>\n",
        "      <td>2611</td>\n",
        "      <td>13</td>\n",
        "      <td>013</td>\n",
        "      <td>180104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Census Tract 1801.05; Barrow County; Georgia</td>\n",
-       "      <td>3041</td>\n",
-       "      <td>13</td>\n",
-       "      <td>013</td>\n",
-       "      <td>180105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Census Tract 1801.06; Barrow County; Georgia</td>\n",
-       "      <td>2584</td>\n",
-       "      <td>13</td>\n",
-       "      <td>013</td>\n",
-       "      <td>180106</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Census Tract 1801.07; Barrow County; Georgia</td>\n",
-       "      <td>4212</td>\n",
+       "      <td>Block Group 1; Census Tract 1801.05; Barrow Co...</td>\n",
+       "      <td>1232</td>\n",
        "      <td>13</td>\n",
        "      <td>013</td>\n",
-       "      <td>180107</td>\n",
+       "      <td>180105</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -147,91 +153,112 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Census Tract 9110.02; Carroll County; Georgia</td>\n",
-       "      <td>3278</td>\n",
+       "      <th>43</th>\n",
+       "      <td>Block Group 3; Census Tract 1612.01; Spalding ...</td>\n",
+       "      <td>1809</td>\n",
        "      <td>13</td>\n",
-       "      <td>045</td>\n",
-       "      <td>911002</td>\n",
+       "      <td>255</td>\n",
+       "      <td>161201</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Census Tract 9111.01; Carroll County; Georgia</td>\n",
-       "      <td>5148</td>\n",
+       "      <th>44</th>\n",
+       "      <td>Block Group 1; Census Tract 1612.02; Spalding ...</td>\n",
+       "      <td>810</td>\n",
        "      <td>13</td>\n",
-       "      <td>045</td>\n",
-       "      <td>911101</td>\n",
+       "      <td>255</td>\n",
+       "      <td>161202</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Census Tract 9111.02; Carroll County; Georgia</td>\n",
-       "      <td>2817</td>\n",
+       "      <th>45</th>\n",
+       "      <td>Block Group 2; Census Tract 1612.02; Spalding ...</td>\n",
+       "      <td>830</td>\n",
        "      <td>13</td>\n",
-       "      <td>045</td>\n",
-       "      <td>911102</td>\n",
+       "      <td>255</td>\n",
+       "      <td>161202</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Census Tract 9112.01; Carroll County; Georgia</td>\n",
-       "      <td>2062</td>\n",
+       "      <th>46</th>\n",
+       "      <td>Block Group 3; Census Tract 1612.02; Spalding ...</td>\n",
+       "      <td>1404</td>\n",
        "      <td>13</td>\n",
-       "      <td>045</td>\n",
-       "      <td>911201</td>\n",
+       "      <td>255</td>\n",
+       "      <td>161202</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Census Tract 9112.02; Carroll County; Georgia</td>\n",
-       "      <td>2874</td>\n",
+       "      <th>47</th>\n",
+       "      <td>Block Group 4; Census Tract 1612.02; Spalding ...</td>\n",
+       "      <td>2224</td>\n",
        "      <td>13</td>\n",
-       "      <td>045</td>\n",
-       "      <td>911202</td>\n",
+       "      <td>255</td>\n",
+       "      <td>161202</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>79 rows × 5 columns</p>\n",
+       "<p>3890 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             NAME B01001_001E state county  \\\n",
-       "0    Census Tract 1801.03; Barrow County; Georgia        6014    13    013   \n",
-       "1    Census Tract 1801.04; Barrow County; Georgia        2611    13    013   \n",
-       "2    Census Tract 1801.05; Barrow County; Georgia        3041    13    013   \n",
-       "3    Census Tract 1801.06; Barrow County; Georgia        2584    13    013   \n",
-       "4    Census Tract 1801.07; Barrow County; Georgia        4212    13    013   \n",
-       "..                                            ...         ...   ...    ...   \n",
-       "23  Census Tract 9110.02; Carroll County; Georgia        3278    13    045   \n",
-       "24  Census Tract 9111.01; Carroll County; Georgia        5148    13    045   \n",
-       "25  Census Tract 9111.02; Carroll County; Georgia        2817    13    045   \n",
-       "26  Census Tract 9112.01; Carroll County; Georgia        2062    13    045   \n",
-       "27  Census Tract 9112.02; Carroll County; Georgia        2874    13    045   \n",
+       "                                                 NAME B01001_001E state  \\\n",
+       "0   Block Group 1; Census Tract 1801.03; Barrow Co...        2025    13   \n",
+       "1   Block Group 2; Census Tract 1801.03; Barrow Co...        2020    13   \n",
+       "2   Block Group 3; Census Tract 1801.03; Barrow Co...        1969    13   \n",
+       "3   Block Group 1; Census Tract 1801.04; Barrow Co...        2611    13   \n",
+       "4   Block Group 1; Census Tract 1801.05; Barrow Co...        1232    13   \n",
+       "..                                                ...         ...   ...   \n",
+       "43  Block Group 3; Census Tract 1612.01; Spalding ...        1809    13   \n",
+       "44  Block Group 1; Census Tract 1612.02; Spalding ...         810    13   \n",
+       "45  Block Group 2; Census Tract 1612.02; Spalding ...         830    13   \n",
+       "46  Block Group 3; Census Tract 1612.02; Spalding ...        1404    13   \n",
+       "47  Block Group 4; Census Tract 1612.02; Spalding ...        2224    13   \n",
        "\n",
-       "     tract  \n",
-       "0   180103  \n",
-       "1   180104  \n",
-       "2   180105  \n",
-       "3   180106  \n",
-       "4   180107  \n",
-       "..     ...  \n",
-       "23  911002  \n",
-       "24  911101  \n",
-       "25  911102  \n",
-       "26  911201  \n",
-       "27  911202  \n",
+       "   county   tract block group  \n",
+       "0     013  180103           1  \n",
+       "1     013  180103           2  \n",
+       "2     013  180103           3  \n",
+       "3     013  180104           1  \n",
+       "4     013  180105           1  \n",
+       "..    ...     ...         ...  \n",
+       "43    255  161201           3  \n",
+       "44    255  161202           1  \n",
+       "45    255  161202           2  \n",
+       "46    255  161202           3  \n",
+       "47    255  161202           4  \n",
        "\n",
-       "[79 rows x 5 columns]"
+       "[3890 rows x 6 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.to_csv(\"data/census_data.csv\", index=False)\n",
     "df\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"data/atlanta_metro_block.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
