Changes to be committed: 	modified:   census_demo/census.ipynb Modified census year

--- a/census_demo/census.ipynb
+++ b/census_demo/census.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "base_url = \"https://api.census.gov/data\"\n",
     "\n",
     "# Specify the year, dataset, and variables you are interested in\n",
-    "year = \"2015\"\n",
+    "year = \"2020\"\n",
     "dataset = \"acs/acs5\"\n",
     "variables = \"NAME,B01001_001E\"  # Example variable for total population\n",
     "\n",
@@ -68,180 +68,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NAME</th>\n",
-       "      <th>B01001_001E</th>\n",
-       "      <th>state</th>\n",
-       "      <th>county</th>\n",
-       "      <th>tract</th>\n",
-       "      <th>block group</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Block Group 1; Census Tract 1801.03; Barrow Co...</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>13</td>\n",
-       "      <td>013</td>\n",
-       "      <td>180103</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Block Group 2; Census Tract 1801.03; Barrow Co...</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>13</td>\n",
-       "      <td>013</td>\n",
-       "      <td>180103</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Block Group 3; Census Tract 1801.03; Barrow Co...</td>\n",
-       "      <td>1969</td>\n",
-       "      <td>13</td>\n",
-       "      <td>013</td>\n",
-       "      <td>180103</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Block Group 1; Census Tract 1801.04; Barrow Co...</td>\n",
-       "      <td>2611</td>\n",
-       "      <td>13</td>\n",
-       "      <td>013</td>\n",
-       "      <td>180104</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Block Group 1; Census Tract 1801.05; Barrow Co...</td>\n",
-       "      <td>1232</td>\n",
-       "      <td>13</td>\n",
-       "      <td>013</td>\n",
-       "      <td>180105</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>Block Group 3; Census Tract 1612.01; Spalding ...</td>\n",
-       "      <td>1809</td>\n",
-       "      <td>13</td>\n",
-       "      <td>255</td>\n",
-       "      <td>161201</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>Block Group 1; Census Tract 1612.02; Spalding ...</td>\n",
-       "      <td>810</td>\n",
-       "      <td>13</td>\n",
-       "      <td>255</td>\n",
-       "      <td>161202</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>Block Group 2; Census Tract 1612.02; Spalding ...</td>\n",
-       "      <td>830</td>\n",
-       "      <td>13</td>\n",
-       "      <td>255</td>\n",
-       "      <td>161202</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>Block Group 3; Census Tract 1612.02; Spalding ...</td>\n",
-       "      <td>1404</td>\n",
-       "      <td>13</td>\n",
-       "      <td>255</td>\n",
-       "      <td>161202</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>Block Group 4; Census Tract 1612.02; Spalding ...</td>\n",
-       "      <td>2224</td>\n",
-       "      <td>13</td>\n",
-       "      <td>255</td>\n",
-       "      <td>161202</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3890 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 NAME B01001_001E state  \\\n",
-       "0   Block Group 1; Census Tract 1801.03; Barrow Co...        2025    13   \n",
-       "1   Block Group 2; Census Tract 1801.03; Barrow Co...        2020    13   \n",
-       "2   Block Group 3; Census Tract 1801.03; Barrow Co...        1969    13   \n",
-       "3   Block Group 1; Census Tract 1801.04; Barrow Co...        2611    13   \n",
-       "4   Block Group 1; Census Tract 1801.05; Barrow Co...        1232    13   \n",
-       "..                                                ...         ...   ...   \n",
-       "43  Block Group 3; Census Tract 1612.01; Spalding ...        1809    13   \n",
-       "44  Block Group 1; Census Tract 1612.02; Spalding ...         810    13   \n",
-       "45  Block Group 2; Census Tract 1612.02; Spalding ...         830    13   \n",
-       "46  Block Group 3; Census Tract 1612.02; Spalding ...        1404    13   \n",
-       "47  Block Group 4; Census Tract 1612.02; Spalding ...        2224    13   \n",
-       "\n",
-       "   county   tract block group  \n",
-       "0     013  180103           1  \n",
-       "1     013  180103           2  \n",
-       "2     013  180103           3  \n",
-       "3     013  180104           1  \n",
-       "4     013  180105           1  \n",
-       "..    ...     ...         ...  \n",
-       "43    255  161201           3  \n",
-       "44    255  161202           1  \n",
-       "45    255  161202           2  \n",
-       "46    255  161202           3  \n",
-       "47    255  161202           4  \n",
-       "\n",
-       "[3890 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geopandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Specify the output directory for TIGER files\u001b[39;00m\n\u001b[1;32m      4\u001b[0m output_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/tiger_files/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
+     ]
     }
    ],
    "source": [
-    "df\n"
+    "import geopandas as gpd\n",
+    "\n",
+    "# Specify the output directory for TIGER files\n",
+    "output_dir = \"data/tiger_files/\"\n",
+    "\n",
+    "# Create a GeoDataFrame from the DataFrame containing block group data\n",
+    "gdf = gpd.GeoDataFrame(df, geometry=gpd.points_from_xy(df[\"longitude\"], df[\"latitude\"]))\n",
+    "\n",
+    "# Download TIGER files for each block group\n",
+    "for index, row in gdf.iterrows():\n",
+    "    state = row[\"state\"]\n",
+    "    county = row[\"county\"]\n",
+    "    tract = row[\"tract\"]\n",
+    "    block_group = row[\"block group\"]\n",
+    "\n",
+    "    # Construct the URL for downloading the TIGER file\n",
+    "    url = f\"https://www2.census.gov/geo/tiger/TIGER{year}/BG/tl_{year}_{state}{county}{tract}{block_group}.zip\"\n",
+    "\n",
+    "    # Download the TIGER file\n",
+    "    gpd.read_file(url).to_file(\n",
+    "        output_dir + f\"tl_{year}_{state}{county}{tract}{block_group}.shp\"\n",
+    "    )\n"
    ]
   },
   {
