Changes to be committed: 	modified:   imputation.ipynb

--- a/imputation.ipynb
+++ b/imputation.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,17 +10,7 @@
         "id": "JOyxs-l3hx6C",
         "outputId": "28024f2b-f4cb-46fa-97b8-f97739e6facf"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[31mERROR: Could not find a version that satisfies the requirement conda (from versions: 3.0.6, 3.5.0, 3.7.0, 3.17.0, 4.0.0, 4.0.1, 4.0.2, 4.0.3, 4.0.4, 4.0.5, 4.0.7, 4.0.8, 4.0.9, 4.1.2, 4.1.6, 4.2.6, 4.2.7, 4.3.13, 4.3.16)\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: No matching distribution found for conda\u001b[0m\u001b[31m\n",
-            "\u001b[0m/bin/bash: line 1: conda: command not found\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -32,7 +22,6 @@
         "from sklearn.experimental import enable_iterative_imputer\n",
         "from sklearn.svm import OneClassSVM\n",
         "\n",
-        "import pca\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -2483,7 +2472,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
