Changes to be committed: 	new file:   bls_random_forests.ipynb 	new file:   choropleth_map.html 	modified:   data/imputation/state_sector_data.csv 	modified:   imputation_preparation.ipynb 	new file:   mappings.py 	new file:   state_sector_eda.ipynb

--- a/imputation_preparation.ipynb
+++ b/imputation_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +39,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "O_GROUP\n",
+       "detailed    653382\n",
+       "major       163109\n",
+       "total        19226\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.O_GROUP.value_counts()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +294,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1784,7 @@
        "[1009 rows x 9 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1808,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1832,7 @@
        "Text(0.5, 1.0, 'Non-missing entries by variable')"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1841,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1871,10 +1888,10 @@
        "  <th>Method:</th>              <td>Least Squares</td>    <th>  F-statistic:       </th> <td>     nan</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>              <td>Sat, 20 Apr 2024</td>   <th>  Prob (F-statistic):</th>  <td>   nan</td> \n",
+       "  <th>Date:</th>              <td>Sun, 21 Apr 2024</td>   <th>  Prob (F-statistic):</th>  <td>   nan</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                  <td>13:11:28</td>       <th>  Log-Likelihood:    </th> <td>  1063.7</td>\n",
+       "  <th>Time:</th>                  <td>10:39:56</td>       <th>  Log-Likelihood:    </th> <td>  1063.7</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>       <td>    49</td>        <th>  AIC:               </th> <td>  -2029.</td>\n",
@@ -2063,8 +2080,8 @@
        "\\textbf{Dep. Variable:}                & ds\\_state\\_mdn\\_salary & \\textbf{  R-squared:         } &     1.000   \\\\\n",
        "\\textbf{Model:}                        &          OLS           & \\textbf{  Adj. R-squared:    } &       nan   \\\\\n",
        "\\textbf{Method:}                       &     Least Squares      & \\textbf{  F-statistic:       } &       nan   \\\\\n",
-       "\\textbf{Date:}                         &    Sat, 20 Apr 2024    & \\textbf{  Prob (F-statistic):} &      nan    \\\\\n",
-       "\\textbf{Time:}                         &        13:11:28        & \\textbf{  Log-Likelihood:    } &    1063.7   \\\\\n",
+       "\\textbf{Date:}                         &    Sun, 21 Apr 2024    & \\textbf{  Prob (F-statistic):} &      nan    \\\\\n",
+       "\\textbf{Time:}                         &        10:39:56        & \\textbf{  Log-Likelihood:    } &    1063.7   \\\\\n",
        "\\textbf{No. Observations:}             &             49         & \\textbf{  AIC:               } &    -2029.   \\\\\n",
        "\\textbf{Df Residuals:}                 &              0         & \\textbf{  BIC:               } &    -1937.   \\\\\n",
        "\\textbf{Df Model:}                     &             48         & \\textbf{                     } &             \\\\\n",
@@ -2146,8 +2163,8 @@
        "Dep. Variable:     ds_state_mdn_salary   R-squared:                       1.000\n",
        "Model:                             OLS   Adj. R-squared:                    nan\n",
        "Method:                  Least Squares   F-statistic:                       nan\n",
-       "Date:                 Sat, 20 Apr 2024   Prob (F-statistic):                nan\n",
-       "Time:                         13:11:28   Log-Likelihood:                 1063.7\n",
+       "Date:                 Sun, 21 Apr 2024   Prob (F-statistic):                nan\n",
+       "Time:                         10:39:56   Log-Likelihood:                 1063.7\n",
        "No. Observations:                   49   AIC:                            -2029.\n",
        "Df Residuals:                        0   BIC:                            -1937.\n",
        "Df Model:                           48                                         \n",
@@ -2216,7 +2233,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 98,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2231,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2255,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -2366,7 +2383,7 @@
        "[1 rows x 140 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2569,7 +2586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -2584,7 +2601,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
