Changes to be committed: 	new file:   ainet-kaggle7.ipynb 	modified:   ainet.ipynb 	new file:   data/data-science-salaries-2023.zip 	new file:   data/data-science-salaries-2023/Latest_Data_Science_Salaries.csv 	new file:   data/data-science-salaries-2023/Latest_Data_Science_Salaries.csv:Zone.Identifier 	new file:   data/data-science-salaries-2023/v2_Latest_Data_Science_Salaries.csv 	new file:   data/data-science-salaries-2023/v2_Latest_Data_Science_Salaries.csv:Zone.Identifier 	new file:   data/data-science-salaries-2023/v3_Latest_Data_Science_Salaries.csv 	new file:   data/data-science-salaries-2023/v3_Latest_Data_Science_Salaries.csv:Zone.Identifier 	new file:   data/data-science-salaries-2023/v4_Latest_Data_Science_Salaries.csv 	new file:   data/data-science-salaries-2023/v4_Latest_Data_Science_Salaries.csv:Zone.Identifier 	new file:   data/data-science-salaries-2023/v5_Latest_Data_Science_Salaries.csv 	new file:   data/data-science-salaries-2023/v5_Latest_Data_Science_Salaries.csv:Zone.Identifier 	new file:   data/data-science-salaries-2023/v6_Latest_Data_Science_Salaries.csv 	new file:   data/data-science-salaries-2023/v6_Latest_Data_Science_Salaries.csv:Zone.Identifier 	new file:   data/data-science-salaries-2023/v7_Latest_Data_Science_Salaries.csv 	new file:   data/data-science-salaries-2023/v7_Latest_Data_Science_Salaries.csv:Zone.Identifier 	renamed:    state_sector_wide.csv -> data/state_sector_wide.csv 	new file:   images/HighPaySectorByState.png 	new file:   images/HighPaySectorByState.svg 	renamed:    choropleth_map.html -> images/choropleth_map.html 	new file:   images/jobs_x_state_sector.png 	new file:   images/salary_x_state_sector.png 	modified:   imputation_evaluation.ipynb 	modified:   state_sector_eda.ipynb

--- a/imputation_evaluation.ipynb
+++ b/imputation_evaluation.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
@@ -28,9 +31,7 @@
     "import missingno\n",
     "from imputation import get_data, custom_pipe, inverse_prep\n",
     "\n",
-    "\n",
-    "%reload_ext autoreload\n",
-    "%autoreload 2"
+    "\n"
    ]
   },
   {
